tests/ui/parser/trait-object-polytrait-priority.stderr
error[E0178]: expected a path on the left-hand side of `+`
  --> $DIR/trait-object-polytrait-priority.rs:6:12
   |
LL |     let _: &for<'a> Trait<'a> + 'static;
   |            ^^^^^^^^^^^^^^^^^^
   |
help: try adding parentheses
   |
LL |     let _: &(for<'a> Trait<'a> + 'static);
   |             +                           +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0178`.
